plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.78'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
	flatDir {
        dir 'libs'
    }

    maven {
        name = 'MinecraftForge'
        url = 'https://maven.minecraftforge.net/'

        content {
            includeGroup 'net.minecraftforge'
        }
    }

    exclusiveContent {
        forRepository { maven { url "https://cursemaven.com" } }
        filter { includeGroup "curse.maven" }
    }

    exclusiveContent {
        forRepository { maven { name = "Modrinth"; url = "https://api.modrinth.com/maven" } }
        filter { includeGroup "maven.modrinth" }
    }
    
    maven {
    	// location of the maven that hosts JEI files since January 2023
    	name = "Jared's maven"
   		url = "https://maven.blamejared.com/"
  	}

    maven {
        url = "https://maven.architectury.dev"
        content {
            includeGroup "dev.architectury"
        }
    }

    maven {
        url = "https://maven.latvian.dev/releases"
        content {
            includeGroup "dev.latvian.mods"
        }
    }
}

base {
    archivesName = "${mod_id}-neoforge"
    version = "${mod_version}-1.21.1"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
	// JEI compatibility (optional)
    compileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
    localRuntime "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"
    
    // Azurelib, Azurelib armor, Geckolib compatibility (optional)
    compileOnly "curse.maven:azurelib-817423:7084472"
    compileOnly "curse.maven:azurelib-armor-912767:7084466"
    compileOnly "curse.maven:geckolib-388172:6304958"
    
	// Iris, Sodium compatibility, compute shader compat (optional)
    compileOnly "curse.maven:irisshaders-455508:6661598"
    compileOnly "curse.maven:sodium-394468:6382651"
    
	// Werewolves, Vampirism compatibility, baking layer model for vampire and visibility fix when transform to the wolf (optional)
    compileOnly "curse.maven:werewolves-become-a-beast-417851:6538693"
    compileOnly "curse.maven:vampirism-become-a-vampire-233029:6544569"
    
	// Curios compatibility, baking curio models from curio slots (optional)
    compileOnly "curse.maven:curios-309927:6529130"
    
    // Player animator compatibility, emote fix (optional)
    compileOnly "curse.maven:playeranimator-658587:6024462"
    
    // KubeJS compatibility
    compileOnly "dev.latvian.mods:kubejs-neoforge:${kubejs_version}"
    compileOnly "dev.latvian.mods:rhino-neoforge:${rhino_version}"
    compileOnly "dev.architectury:architectury-neoforge:${architectury_version}"
    
    // Libraries for tr7zw featured mods (optional, when you dependent your project on 3D Skin Layers or First-person)
    compileOnly "libs:TRansition:1.0.6"
    compileOnly "libs:TRender:1.0.7"
    
    // Skinlayer3d compatibility (optional)
    compileOnly "maven.modrinth:3dskinlayers:B7MZQ4xS"
    
    // First-person compatibility (optional)
    compileOnly "maven.modrinth:first-person-model:QWJDSZiH" // 2.5.0
    
    // Shoulder Surfing Reloaded compatibility (optional, have to choose one)

    compileOnly "curse.maven:shoulder-surfing-reloaded-243190:6993797" // API only (https://www.curseforge.com/minecraft/mc-mods/shoulder-surfing-reloaded/files/6993792)
    //compileOnly "curse.maven:shoulder-surfing-reloaded-243190:6993795" // Actual mod file (for test)
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

// Create source.jar
java {
    withSourcesJar()
}